load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/example/project",
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_cloud_go_datastore//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
    ],
)

go_binary(
    name = "go_bin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
